--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup Node 16
       - uses: actions/setup-node@v3
-        width:
+        with:
           node-version: 16.x
       - run: npm install
       - run: npm run lint
