--- a/.github/workflow/test.yml
+++ b/.github/workflow/test.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
       node: ['16']
-    steps
+    steps:
       - uses: actions/checkout@v3
       - name: Setup Node 16
         uses: actions/setup-node@v2
