--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@
        steps: 
            - uses: actions/checkot@v2 
            - name: setup node 16
-             uses: actcions/setup-node@v2 
+           - uses: actcions/setup-node@v2 
        with:
            - node-version 16.x
            - run:  npm install
