--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,19 +2,20 @@
    on: [pull_request]
 
    jobs: 
-    build:
-     runs-on: ubuntu-latest
-     strategy:
-      matrix:
-       node: ['16']
-       steps: 
-           - uses: actions/checkot@v2 
-           - name: setup node 16
-           - uses: actcions/setup-node@v2 
-       with:
-           - node-version 16.x
-           - run:  npm install
-           - run:  npm run lint
+      build:
+        runs-on: ubuntu-latest
+        strategy:
+          matrix:
+            node: ['16']
+        steps: 
+          - uses: actions/checkot@v2 
+          - name: setup node 16
+            uses: actcions/setup-node@v2 
+            with:
+              node-version: 16.x
+          - run: npm install
+          - run: npm run lint
 
 
 
+ 
